--- a/angular.json
+++ b/angular.json
@@ -27,10 +27,11 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.sass"
             ],
             "scripts": [
-            "./node_modules/nedb/browser-version/out/nedb.min.js"
+              "./node_modules/nedb/browser-version/out/nedb.min.js"
             ]
           },
           "configurations": {
@@ -85,6 +86,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.sass"
             ],
             "scripts": [],
