--- a/package.json
+++ b/package.json
@@ -24,16 +24,16 @@
     "deploy": "NODE_ENV=production electron-builder build --win --mac --publish always"
   },
   "dependencies": {
-    "@angular/animations": "~9.1.13",
+    "@angular/animations": "~10.2.5",
     "@angular/cdk": "~9.2.4",
-    "@angular/common": "~9.1.13",
-    "@angular/compiler": "~9.1.13",
-    "@angular/core": "~9.1.13",
-    "@angular/forms": "~9.1.13",
+    "@angular/common": "~10.2.5",
+    "@angular/compiler": "~10.2.5",
+    "@angular/core": "~10.2.5",
+    "@angular/forms": "~10.2.5",
     "@angular/material": "^9.2.4",
-    "@angular/platform-browser": "~9.1.13",
-    "@angular/platform-browser-dynamic": "~9.1.13",
-    "@angular/router": "~9.1.13",
+    "@angular/platform-browser": "~10.2.5",
+    "@angular/platform-browser-dynamic": "~10.2.5",
+    "@angular/router": "~10.2.5",
     "@types/electron": "^1.6.10",
     "@types/nedb": "^1.8.9",
     "@types/socket.io-client": "^1.4.32",
@@ -60,12 +60,12 @@
   "private": true,
   "devDependencies": {
     "@angular-devkit/architect": "~0.801.2",
-    "@angular-devkit/build-angular": "~0.901.15",
-    "@angular-devkit/core": "~9.1.15",
-    "@angular-devkit/schematics": "~9.1.15",
-    "@angular/cli": "^9.1.15",
-    "@angular/compiler-cli": "~9.1.13",
-    "@angular/language-service": "~9.1.13",
+    "@angular-devkit/build-angular": "~0.1002.4",
+    "@angular-devkit/core": "~10.2.4",
+    "@angular-devkit/schematics": "~10.2.4",
+    "@angular/cli": "^10.2.4",
+    "@angular/compiler-cli": "~10.2.5",
+    "@angular/language-service": "~10.2.5",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^8.10.54",
@@ -73,18 +73,18 @@
     "electron": "^10.4.7",
     "electron-builder": "^22.8.1",
     "electron-packager": "^12.2.0",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^2.0.6",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "protractor": "~7.0.0",
     "run-script-os": "^1.1.6",
     "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.8.3"
+    "tslint": "~6.1.0",
+    "typescript": "~4.0.8"
   },
   "build": {
     "appId": "Delirium",
