--- a/package.json
+++ b/package.json
@@ -43,16 +43,16 @@
     "core-js": "^2.6.9",
     "file-system": "^2.2.2",
     "fs": "0.0.1-security",
-    "jsoneditor": "^8.6.1",
+    "jsoneditor": "^9.1.4",
     "lodash": "^4.17.21",
     "mongoose": "^5.13.4",
     "nedb": "^1.8.0",
     "ngx-electron": "^1.0.4",
     "ngx-json-viewer": "^2.4.0",
-    "ngx-socket-io": "^3.4.0",
+    "ngx-socket-io": "4.2.0",
     "node-sass": "^4.13.1",
     "path": "^0.12.7",
-    "rxjs": "~6.5.1",
+    "rxjs": "^7.4.0",
     "socket.io-client": "^2.3.0",
     "xlsx": "^0.17.0",
     "zone.js": "~0.11.4"
@@ -73,12 +73,12 @@
     "electron": "^10.4.7",
     "electron-builder": "^22.8.1",
     "electron-packager": "^12.2.0",
-    "jasmine-core": "~3.6.0",
+    "jasmine-core": "4.4.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.4.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
+    "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "run-script-os": "^1.1.6",
