--- a/package.json
+++ b/package.json
@@ -34,6 +34,15 @@
     "@angular/platform-browser": "^14.3.0",
     "@angular/platform-browser-dynamic": "^14.3.0",
     "@angular/router": "^14.3.0",
+    "@capacitor-community/electron": "^4.1.2",
+    "@capacitor/android": "^5.1.0",
+    "@capacitor/app": "5.0.5",
+    "@capacitor/core": "5.1.0",
+    "@capacitor/haptics": "5.0.5",
+    "@capacitor/ios": "^5.1.0",
+    "@capacitor/keyboard": "5.0.5",
+    "@capacitor/status-bar": "5.0.5",
+    "@ionic/angular": "^7.0.0",
     "@types/nedb": "^1.8.9",
     "@types/socket.io-client": "^1.4.32",
     "ang-jsoneditor": "^1.9.1",
@@ -42,6 +51,7 @@
     "core-js": "^2.6.9",
     "file-system": "^1.2.2",
     "fs": "0.0.1-security",
+    "ionicons": "^7.0.0",
     "jsoneditor": "^9.1.4",
     "lodash": "^4.17.21",
     "mongoose": "^5.13.4",
@@ -53,19 +63,10 @@
     "rxjs": "^7.4.0",
     "socket.io-client": "^2.3.0",
     "xlsx": "^0.17.0",
-    "zone.js": "~0.11.4",
-
-    "@capacitor/app": "5.0.5",
-    "@capacitor/core": "5.1.0",
-    "@capacitor/haptics": "5.0.5",
-    "@capacitor/keyboard": "5.0.5",
-    "@capacitor/status-bar": "5.0.5",
-    "@ionic/angular": "^7.0.0",
-    "ionicons": "^7.0.0"
+    "zone.js": "~0.11.4"
   },
   "private": true,
   "devDependencies": {
-
     "@angular-builders/custom-webpack": "14.1.0",
     "@angular-devkit/architect": "^0.1402.12",
     "@angular-devkit/build-angular": "^14.2.12",
@@ -74,7 +75,8 @@
     "@angular/cli": "^14.2.12",
     "@angular/compiler-cli": "^14.3.0",
     "@angular/language-service": "^14.3.0",
-
+    "@capacitor/cli": "5.1.0",
+    "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "16.11.68",
@@ -94,10 +96,7 @@
     "ts-node": "~7.0.0",
     "tslint": "~6.1.0",
     "typescript": "~4.6.4",
-    "webpack": "^5.74.0",
-
-    "@capacitor/cli": "5.1.0",
-    "@ionic/angular-toolkit": "^9.0.0"
+    "webpack": "^5.74.0"
   },
   "build": {
     "appId": "Delirium",
