--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular/material": "^14.2.7",
     "@angular/platform-browser": "^14.3.0",
     "@angular/platform-browser-dynamic": "^14.3.0",
+    "@angular/pwa": "^0.5.3",
     "@angular/router": "^14.3.0",
     "@capacitor-community/electron": "^4.1.2",
     "@capacitor/android": "^5.1.0",
@@ -43,6 +44,7 @@
     "@capacitor/keyboard": "5.0.5",
     "@capacitor/status-bar": "5.0.5",
     "@ionic/angular": "^7.0.0",
+    "@ionic/storage-angular": "^4.0.0",
     "@types/nedb": "^1.8.9",
     "@types/socket.io-client": "^1.4.32",
     "ang-jsoneditor": "^1.9.1",
