--- a/angular.json
+++ b/angular.json
@@ -68,6 +68,29 @@
                   "maximumError": "5mb"
                 }
               ]
+            },
+            "electron-dev": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.electron.dev.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                }
+              ]
             }
           },
           "defaultConfiguration": ""
@@ -80,6 +103,9 @@
           "configurations": {
             "production": {
               "browserTarget": "app:build:production"
+            },
+            "electron-dev": {
+              "browserTarget": "app:build:electron-dev",
             }
           }
         },
