Correccion Rotación de pantalla

--- a/package.json
+++ b/package.json
@@ -6,19 +6,15 @@
   "author": "Carlos Cabrera",
   "license": "MIT",
   "scripts": {
-
     "ng": "ng",
     "start": "ng serve --configuration=electron-dev",
     "start-prod": "ng serve --configuration=electron-prod",
-
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-
     "electron": "run-script-os",
     "electron:win32": "SET NODE_ENV=dev&& electron .",
     "electron:darwin": "NODE_ENV=dev electron .",
-
     "dist": "electron-builder",
     "dist-mac": "electron-packager . --platform=darwin",
     "electron-build": "ng build --configuration production && electron .",
@@ -40,13 +36,16 @@
     "@angular/platform-browser-dynamic": "^14.3.0",
     "@angular/pwa": "^0.5.3",
     "@angular/router": "^14.3.0",
+    "@awesome-cordova-plugins/screen-orientation": "^6.3.0",
     "@capacitor-community/electron": "^4.1.2",
     "@capacitor/android": "^5.1.0",
+    "@capacitor/angular": "^2.0.3",
     "@capacitor/app": "5.0.5",
     "@capacitor/core": "5.1.0",
     "@capacitor/haptics": "5.0.5",
     "@capacitor/ios": "^5.1.0",
     "@capacitor/keyboard": "5.0.5",
+    "@capacitor/screen-orientation": "^5.0.5",
     "@capacitor/status-bar": "5.0.5",
     "@ionic/angular": "^7.0.0",
     "@ionic/storage-angular": "^4.0.0",
@@ -55,6 +54,7 @@
     "ang-jsoneditor": "^1.9.1",
     "animate.css": "^4.1.1",
     "convert-excel-to-json": "^1.4.1",
+    "cordova-plugin-screen-orientation": "^3.0.3",
     "core-js": "^2.6.9",
     "file-system": "^1.2.2",
     "fs": "0.0.1-security",
