--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "@angular/cli": "^14.2.12",
     "@angular/compiler-cli": "^14.3.0",
     "@angular/language-service": "^14.3.0",
+    "@capacitor/assets": "^3.0.1",
     "@capacitor/cli": "5.1.0",
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~3.6.0",
