--- a/package.json
+++ b/package.json
@@ -103,7 +103,7 @@
     "run-script-os": "^1.1.6",
     "ts-node": "~7.0.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.6.4",
+    "typescript": "^4.8.0",
     "webpack": "^5.74.0"
   },
   "build": {
