--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "module": "es2015",
     "moduleResolution": "node",
     "experimentalDecorators": true,
-    "target": "es2020",
+    "target": "ES2022",
     "typeRoots": [
       "../node_modules/@types",
       "../src/types"
@@ -16,8 +16,8 @@
     "lib": [
       "es2018",
       "dom"
-    ]
-    
+    ],
+    "useDefineForClassFields": false
   },
   "exclude": [
     "node_modules",
