--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "mongoose": "^5.13.4",
     "nedb": "^1.8.0",
     "ngx-json-viewer": "^2.4.0",
-    "ngx-socket-io": "4.3.0",
+    "ngx-socket-io": "4.4.0",
     "node-sass": "^7.0.3",
     "path": "^0.12.7",
     "rxjs": "^7.4.0",
@@ -74,7 +74,7 @@
   },
   "private": true,
   "devDependencies": {
-    "@angular-builders/custom-webpack": "14.1.0",
+    "@angular-builders/custom-webpack": "^15.0.0",
     "@angular-devkit/architect": "^0.1502.10",
     "@angular-devkit/build-angular": "^15.2.10",
     "@angular-devkit/core": "^15.2.10",
