--- a/package.json
+++ b/package.json
@@ -31,22 +31,22 @@
     "@angular/compiler": "^17.0.7",
     "@angular/core": "^17.0.7",
     "@angular/forms": "^17.0.7",
-    "@angular/material": "^16.2.0",
+    "@angular/material": "^17.0.4",
     "@angular/platform-browser": "^17.0.7",
     "@angular/platform-browser-dynamic": "^17.0.7",
     "@angular/pwa": "^0.5.3",
     "@angular/router": "^17.0.7",
     "@awesome-cordova-plugins/screen-orientation": "^6.3.0",
     "@capacitor-community/electron": "^4.1.2",
-    "@capacitor/android": "^5.1.0",
+    "@capacitor/android": "^5.0.0",
     "@capacitor/angular": "^2.0.3",
-    "@capacitor/app": "5.0.5",
-    "@capacitor/core": "5.1.0",
-    "@capacitor/haptics": "5.0.5",
-    "@capacitor/ios": "^5.1.0",
-    "@capacitor/keyboard": "5.0.5",
-    "@capacitor/screen-orientation": "^5.0.5",
-    "@capacitor/status-bar": "5.0.5",
+    "@capacitor/app": "^5.0.0",
+    "@capacitor/core": "^5.0.0",
+    "@capacitor/haptics": "^5.0.0",
+    "@capacitor/ios": "^5.0.0",
+    "@capacitor/keyboard": "^5.0.0",
+    "@capacitor/screen-orientation": "^5.0.0",
+    "@capacitor/status-bar": "^5.0.0",
     "@ionic/angular": "^7.0.0",
     "@ionic/storage-angular": "^4.0.0",
     "@types/nedb": "^1.8.9",
@@ -64,7 +64,7 @@
     "mongoose": "^5.13.4",
     "nedb": "^1.8.0",
     "ngx-json-viewer": "^2.4.0",
-    "ngx-socket-io": "4.5.0",
+    "ngx-socket-io": "4.6.1",
     "node-sass": "^7.0.3",
     "path": "^0.12.7",
     "rxjs": "^7.4.0",
@@ -83,11 +83,11 @@
     "@angular/compiler-cli": "^17.0.7",
     "@angular/language-service": "^17.0.7",
     "@capacitor/assets": "^3.0.1",
-    "@capacitor/cli": "5.1.0",
+    "@capacitor/cli": "^5.0.0",
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "16.11.68",
+    "@types/node": "^20.10.5",
     "codelyzer": "^6.0.0",
     "electron": "21.0.1",
     "electron-builder": "^23.6.0",
@@ -131,7 +131,8 @@
   },
   "compilerOptions": {
     "typeRoots": [
-      "node_modules/@types"
+      "node_modules/@types",
+      "src/types"
     ]
   }
 }
