--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -1,8 +1,8 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    "outDir": "../out-tsc/app",
-    "types": ["./types/global"]
+    "outDir": "../out-tsc/app"
+    //"types": ["./types/global"]
   },
   "exclude": [
     "test.ts",
