Mejoras de estabilidad sistema de ordenes paralelas

--- a/angular.json
+++ b/angular.json
@@ -15,17 +15,13 @@
       },
       "architect": {
         "build": {
-          "builder": "@angular-builders/custom-webpack:browser",
+          "builder": "@angular-devkit/build-angular:application",
           "options": {
             "outputPath": "delirium",
             "index": "src/index.html",
-            "main": "src/main.ts",
-            "polyfills": "src/polyfills.ts",
+            "browser": "src/main.ts",
+            "polyfills": ["src/polyfills.ts"],
             "tsConfig": "src/tsconfig.app.json",
-            "customWebpackConfig": {
-                 "path": "./webpack.config.js",
-                 "replaceDuplicatePlugins": true
-              },
             "assets": [
               "src/favicon.ico",
               "src/assets"
@@ -38,9 +34,7 @@
               "./node_modules/nedb/browser-version/out/nedb.min.js"
             ],
             "aot": false,
-            "vendorChunk": true,
             "extractLicenses": false,
-            "buildOptimizer": false,
             "sourceMap": true,
             "optimization": false,
             "namedChunks": true
@@ -59,8 +53,6 @@
               "namedChunks": false,
               "aot": true,
               "extractLicenses": true,
-              "vendorChunk": false,
-              "buildOptimizer": true,
               "budgets": [
                 {
                   "type": "initial",
@@ -82,8 +74,6 @@
               "namedChunks": true,
               "aot": false,
               "extractLicenses": true,
-              "vendorChunk": true,
-              "buildOptimizer": false,
               "budgets": [
                 {
                   "type": "initial",
@@ -96,16 +86,16 @@
           "defaultConfiguration": ""
         },
         "serve": {
-          "builder": "@angular-builders/custom-webpack:dev-server",
+          "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "app:build"
+            "buildTarget": "app:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "app:build:production"
+              "buildTarget": "app:build:production"
             },
             "electron-dev": {
-              "browserTarget": "app:build:electron-dev",
+              "buildTarget": "app:build:electron-dev"
             }
           }
         },
